--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "vite-plugin-pwa": "^1.0.2",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
