--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "ミニメモ",
     "short_name": "ミニメモ",
     "start_url": "/",
-    "display": "browser",
+    "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#ffffff",
     "description": "Memo Application",
