--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.7.1",
     "react-virtual-keyboard": "^1.0.2",
     "vite-plugin-pwa": "^1.0.2",
+    "wanakana": "^5.3.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
